Bug 1861346 - Update indeterminate state when getting added or removed from a radio group.  a=diannaS

Original Revision: https://phabricator.services.mozilla.com/D191949

Differential Revision: https://phabricator.services.mozilla.com/D192209